// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertColorsConfiguration should support accentPrimaryDeprecated 1`] = `
{
  "accentPrimary": {
    "a": 1,
    "b": 238,
    "g": 101,
    "r": 93,
  },
  "background": undefined,
  "border": undefined,
  "cardBackground": undefined,
  "headerBackground": undefined,
  "sidebarBackground": undefined,
  "type": "light",
}
`;

exports[`convertThemedColorConfig converts dark to light 1`] = `
{
  "accentPrimary": {
    "a": 1,
    "b": 255,
    "g": 255,
    "r": 255,
  },
  "background": {
    "a": 1,
    "b": 0,
    "g": 0,
    "r": 0,
  },
  "border": undefined,
  "cardBackground": undefined,
  "headerBackground": undefined,
  "sidebarBackground": undefined,
}
`;

exports[`convertThemedColorConfig converts light to dark 1`] = `
{
  "accentPrimary": {
    "a": 1,
    "b": 0,
    "g": 0,
    "r": 0,
  },
  "background": {
    "a": 1,
    "b": 255,
    "g": 255,
    "r": 255,
  },
  "border": undefined,
  "cardBackground": undefined,
  "headerBackground": undefined,
  "sidebarBackground": undefined,
}
`;

exports[`convertThemedColorConfig correctly interprets dark 1`] = `
{
  "accentPrimary": {
    "a": 1,
    "b": 255,
    "g": 255,
    "r": 255,
  },
  "background": {
    "a": 1,
    "b": 0,
    "g": 0,
    "r": 0,
  },
  "border": undefined,
  "cardBackground": undefined,
  "headerBackground": undefined,
  "sidebarBackground": undefined,
}
`;

exports[`convertThemedColorConfig correctly interprets light 1`] = `
{
  "accentPrimary": {
    "a": 1,
    "b": 0,
    "g": 0,
    "r": 0,
  },
  "background": {
    "a": 1,
    "b": 255,
    "g": 255,
    "r": 255,
  },
  "border": undefined,
  "cardBackground": undefined,
  "headerBackground": undefined,
  "sidebarBackground": undefined,
}
`;
